# FainEngine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: Application.h  Engine.h  eng.h
engine/include/debug/: FpsCounter.h  ImGuiLayer.h  Profiler.h  ProfilerVulkan.h
engine/include/graphics/: GraphicsPipelineBuilder.h  ShaderLibrary.h  ShaderModule.h  Texture2D.h  TextureCube.h
engine/include/logger/: Logger.h
engine/include/render/: MeshData.h  PerFrameData.h  RenderableStaticMesh.h  SceneUniforms.h  SkyboxPass.h  StaticMesh.h  TexturedMeshPass.h  VertexTypes.h
engine/include/utils/: Camera.h  UtilsCubemap.h
engine/include/vk/: GraphicsPipelineBuilder.h  VulkanAllocator.h  VulkanBuffer.h  VulkanBufferUtils.h  VulkanCommandBuffer.h  VulkanCommon.h  VulkanContext.h  VulkanDescriptors.h  VulkanHandles.h  VulkanMaterialBindings.h  VulkanMeshUtils.h  VulkanPipelineCache.h  VulkanResourceHolder.h  VulkanSkyboxBindings.h  VulkanSwapchain.h  VulkanTexture2D.h  VulkanUploadContext.h  VulkanUtils.h
engine/libs/: libs.cpp
engine/libs/taskflow/modules/: tf.cppm
engine/source/: Application.cpp  Engine.cpp
engine/source/debug/: ImGuiLayer.cpp
engine/source/graphics/: ShaderModule.cpp  Texture2D.cpp  TextureCube.cpp
engine/source/logger/: Logger.cpp
engine/source/render/: MeshData.cpp  RenderableStaticMesh.cpp  SceneUniforms.cpp  SkyboxPass.cpp  TexturedMeshPass.cpp
engine/source/utils/: Camera.cpp  UtilsCubemap.cpp
engine/source/vk/: ShaderModule.cpp  VulkanAllocator.cpp  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanContext.cpp  VulkanDescriptors.cpp  VulkanMaterialBindings.cpp  VulkanPipelineCache.cpp  VulkanSkyboxBindings.cpp  VulkanSwapchain.cpp  VulkanTexture2D.cpp  VulkanUploadContext.cpp
include/: Game.h
source/: Game.cpp  main.cpp  main.frag  main.frag.spv  main.vert  main.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
source/examples/GLSL_test/: main.cpp
source/examples/KTX/: main.cpp
